baby te voa dar una welta por la playita

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 .devcontainer/
 .data/
 .scrapped/
+.songs/
+.vscode/
 functions/environment/*.pth
+asa.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
